--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Atlas Jekyll Theme
+title: SeanGo Blog
 desciption: >
   A jekyll theme for personal website.
 email: yourusername@gmail.com
-baseurl: "/atlas-jekyll-theme" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 #replace nrdybhu1.github.io with your domainname.com
-url: "https://nrdybhu1.github.io" # the base hostname & protocol for your site
+url: "https://seango-jnu.github.io" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  Jekyll
 markdown: kramdown
